Update with code-generated api bindings and models performed 2020-04-29
