# splunk_sdk/search/v2beta1/openapi.yaml
@@ -82,6 +82,143 @@ components:
       schema:
         type: string
   schemas:
+    DeleteSearchJob:
+      description: A fully-constructed delete search job, including read-only fields.
+      properties:
+        allowSideEffects:
+          default: true
+          description: |
+            Specifies that the delete search job will contain side effects, with possible security risks.
+          readOnly: true
+          type: boolean
+        collectEventSummary:
+          default: false
+          description: |
+            This field does not apply to delete search jobs and is defaulted to false.
+          readOnly: true
+          type: boolean
+        collectFieldSummary:
+          default: false
+          description: |
+            This field does not apply to delete search jobs and is defaulted to false.
+          readOnly: true
+          type: boolean
+        collectTimeBuckets:
+          default: false
+          description: |
+            This field does not apply to delete search jobs and is defaulted to false.
+          readOnly: true
+          type: boolean
+        completionTime:
+          description: |
+            The time, in GMT, that the search job is finished. Empty if the search job has not completed.
+          readOnly: true
+          type: string
+        dispatchTime:
+          description: |
+            The time, in GMT, that the search job is dispatched.
+          readOnly: true
+          type: string
+        enablePreview:
+          default: false
+          description: |
+            This field does not apply to delete search jobs and is defaulted to false.
+          readOnly: true
+          type: boolean
+        extractAllFields:
+          default: false
+          description: |
+            Specifies whether the Search service should extract all of the available fields in the data, including fields not mentioned in the SPL for the search job. Set to 'false' for better search peformance.
+          type: boolean
+        index:
+          description: The index to delete events from.
+          type: string
+        maxTime:
+          default: 3600
+          description: |
+            The amount of time, in seconds, to run the delete search job before finalizing the search. The maximum value is 3600 seconds (1 hour).
+          maximum: 3600
+          minimum: 1
+          type: number
+        messages:
+          items:
+            $ref: '#/components/schemas/Message'
+          type: array
+        module:
+          description: The module to run the delete search job in. The default module
+            is used if module field is empty.
+          type: string
+        name:
+          description: The name of the created search job.
+          maxLength: 100
+          readOnly: true
+          type: string
+        percentComplete:
+          default: 0
+          description: An estimate of the percent of time remaining before the delete
+            search job completes.
+          readOnly: true
+          type: integer
+        prediate:
+          description: Events satisfying this predicate are going to be deleted. To
+            delete all events from the index, "true" should be specified for this
+            field.
+          type: string
+        previewAvailable:
+          default: false
+          description: This field does not apply to delete search jobs and is defaulted
+            to false.
+          readOnly: true
+          type: string
+        query:
+          description: The SPL search string that is generated based on index, module
+            and predicate that are specified.
+          readOnly: true
+          type: string
+        queryParameters:
+          allOf:
+          - $ref: '#/components/schemas/QueryParameters'
+          description: Represents parameters on the search job such as 'earliest'
+            and 'latest'.
+        requiredFreshness:
+          default: 0
+          description: |
+            This field does not apply to delete search jobs and is set to 0.
+          readOnly: true
+          type: number
+        resolvedEarliest:
+          description: |
+            The earliest time speciifed as an absolute value in GMT. The time is computed based on the values you specify for the 'timezone' and 'earliest' queryParameters.
+          readOnly: true
+          type: string
+        resolvedLatest:
+          description: |
+            The latest time specified as an absolute value in GMT. The time is computed based on the values you specify for the 'timezone' and 'earliest' queryParameters.
+          readOnly: true
+          type: string
+        resultsAvailable:
+          default: 0
+          description: The number of results produced so far by the delete search
+            job that are going to be deleted.
+          readOnly: true
+          type: integer
+        resultsPreviewAvailable:
+          default: 0
+          description: This field does not apply to delete search jobs and is defaulted
+            to 0.
+          readOnly: true
+          type: integer
+        sid:
+          description: The ID assigned to the delete search job.
+          readOnly: true
+          type: string
+        status:
+          $ref: '#/components/schemas/SearchStatus'
+      required:
+      - index
+      - module
+      - predicate
+      type: object
     Error:
       properties:
         code:
@@ -763,5 +900,30 @@ paths:
           description: The resource wasn't found.
         "500":
           description: An internal service error occurred.
+  /{tenant}/search/v2beta1/jobs/delete:
+    parameters:
+    - $ref: '#/components/parameters/AuthorizationHeader'
+    - $ref: '#/components/parameters/tenant'
+    post:
+      description: |
+        Creates a search job that deletes events from an index. The events are deleted from the index in the specified module, based on the search criteria as specified by the predicate.
+      operationId: deleteJob
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeleteSearchJob'
+          description: The delete search job was created successfully.
+        "400":
+          description: The request isn't valid.
+        "401":
+          description: The user isn’t authenticated.
+        "403":
+          description: The operation isn't authorized.
+        "404":
+          description: The resource wasn't found.
+        "500":
+          description: An internal service error occurred.
 
-# Retrieved from scp-openapi commit 1a58317339e18d6d996946a3e068abf030892b83 path: search/v2beta1/openapi.yaml
+# Retrieved from scp-openapi commit ae71b4bbf09256bf99e116a06f1de945e742b26c path: search/v2beta1/openapi.yaml
